<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WeatherApp</string>
    <string name="title">Погода</string>

    <string name="city_request">Введите название города</string>

    <string name="parameter_temperature">Температура</string>
    <string name="parameter_humidity">Влажность</string>
    <string name="parameter_pressure">Давление</string>

    <string name="parameter_temperature_result">"Температура 23 градуса"</string>
    <string name="parameter_humidity_result">Влажность 67%</string>
    <string name="parameter_pressure_result">Давление 1002 мбар</string>

    <string name="weather_sunny">Солнечно</string>

    <string name="button_refresh">Обновить</string>
    <string name="button_search">Запрос</string>
    <string name="button_back">Назад</string>

    <string name="greeting">Приветствую</string>


    <string name="location">Лондон</string>

    <string name="toast_refresh">Подождите...</string>
    <string name="toast_search">Поиск...</string>

    <string name="space"> </string>


</resources>
